# mac-lib-plugin

./: .gitignore  LICENSE  README.md  cabal.project  changelog.md  contributors.txt  mac.cabal
Examples/: Alice0.hs  Alice1.hs  Alice2.hs  Alice3.hs  Alice4.hs  Bob0.hs  Bob1.hs  Bob2.hs  Bob3.hs  Bob4.hs  Examples.hs  MACWget.hs
MAC/: Control.hs  Core.hs  Effects.hs  FlexibleLb.hs  Functor.hs  KindDefaults.hs  Labeled.hs  Lattice.hs  MAC.hs  MVar.hs  Plugin.hs  PluginTh.hs  Prelude.hs  PreludeBase.hs
bad-examples/: .TestNoDefer.hs.swp  TestNoDefer.cabal  TestNoDefer.hs
basic-examples-new-plugin/: 01-HelloWorld.hs  02-Factorial.hs  03-Fibonacci.hs  04-CryptoHash.hs  05-Char.hs  BasicExamples.cabal
good-examples/: TestDefer.cabal  TestDefer.hs
grit-examples/: TestGrit.cabal  TestGrit.hs
no-plugin-examples/: TestNoPlugin.cabal  TestNoPlugin.hs
sacred-examples/: TestSacred.cabal  TestSacred.hs
